--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,6 +56,8 @@
         "xutility": "cpp",
         "queue": "cpp",
         "xhash": "cpp",
-        "xtree": "cpp"
+        "xtree": "cpp",
+        "ratio": "cpp",
+        "regex": "cpp"
     }
 }
