--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -86,6 +86,13 @@
         "shared_mutex": "cpp",
         "thread": "cpp",
         "typeindex": "cpp",
-        "valarray": "cpp"
+        "valarray": "cpp",
+        "flat_map": "cpp",
+        "flat_set": "cpp",
+        "ranges": "cpp",
+        "span": "cpp",
+        "stacktrace": "cpp",
+        "variant": "cpp",
+        "format": "cpp"
     }
 }
